--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/ThistleMouse/regexcite
+BugReports: https://github.com/ThistleMouse/regexcite/issues
